--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
   debug: msg="{{ ansible_distribution }}"
 
 ############################
-# Install Docker on CentOS #
+# Install Docker on Ubuntu #
 ############################
 
 - name: Install on Docker on CentOS
@@ -18,6 +18,9 @@
         - curl
         - gnupg-agent
         - software-properties-common
+        - python3-pip
+        - python3
+        - python-pip
 
     - name: Add Docker's official GPG key
       apt_key:
